@@ -40,7 +40,7 @@ AUTHOR
     <http://skim.cz>
 
 LICENSE AND COPYRIGHT
-     © 2005-2015 Michal Špaček
+     © 2005-2016 Michal Špaček
      BSD 2-Clause License
 
 VERSION
