@@ -252,7 +252,7 @@ L<http://skim.cz/>
 
 =head1 LICENSE AND COPYRIGHT
 
- © 2005-2015 Michal Špaček
+ © 2005-2016 Michal Špaček
  BSD 2-Clause License
 
 =head1 VERSION
